<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#FF9800"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF6200"
                android:textStyle="bold"
                android:textSize="65sp"
                android:text="@string/doctor"
                android:gravity="center"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#BD9400"
                android:gravity="center"
                android:textStyle="normal"
                android:text="@string/descinmainactivity"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#BD9400"
                android:gravity="center"
                android:textStyle="normal"
                android:text="@string/descinmainactivity2"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/capture"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="40dp"/>

        </LinearLayout>

    </LinearLayout>

