<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avolatile.ultimate.doctor.MyProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#FF6200" />

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:background="#C5C5D5"
                    android:gravity="center"
                    android:padding="5dp"
                    android:shadowColor="#a4a4a4"
                    android:shadowDy="-5"
                    android:shadowRadius="5"
                    android:text="MY PROFILE"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@drawable/fillcolor"
                        android:hint="@string/firstname"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textSize="12dp" />


                    <EditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@drawable/fillcolor"
                        android:hint="@string/lastname"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textSize="12dp" />

                    <EditText
                        android:id="@+id/speciality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@drawable/fillcolor"
                        android:hint="@string/speciality"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textSize="12dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:src="@drawable/profile" />


                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@drawable/fillcolor"
                        android:hint="@string/location"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textSize="12dp" />

                    <EditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@drawable/fillcolor"
                        android:hint="@string/dob"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textSize="12dp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@drawable/fillcolor"
                        android:hint="@string/pin"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textSize="12dp" />

                    <EditText
                        android:id="@+id/age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@drawable/fillcolor"
                        android:hint="@string/age"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="Female" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/mobileno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="2"
                    android:background="@drawable/fillcolor"
                    android:hint="@string/mobileno"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/verify"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:gravity="center"
                    android:shadowColor="#c5c5d5"
                    android:shadowDx="2"
                    android:shadowDy="4"
                    android:shadowRadius="2"
                    android:text="Verify" />

            </LinearLayout>


            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="75dp"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:padding="10dp"
                android:shadowColor="#c5c5d5"
                android:shadowDx="2"
                android:shadowDy="4"
                android:shadowRadius="2"
                android:text="save"
                android:textColor="#000000" />
        </LinearLayout>

    </ScrollView>

    <include
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>


</LinearLayout>
